fixed about title on mobile

--- a/app/stylesheets/mobile.css
+++ b/app/stylesheets/mobile.css
@@ -1,3 +1,4 @@
+
 /* General */
 .main {
     padding:0;
@@ -66,6 +67,7 @@ hr {
 /* About Me */
 .abouth1 {
     font-size: 40px;
+    text-align: center;
 }
 .about_article {
     font-size: 16px;
